samples/_failures_safe/1761333982_0f0fa4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f1276a9.c: In function ‘free_graph’:
./samples/SAFE/__tmp_3f1276a9.c:190:9: error: expected declaration or statement at end of input
  190 |         current = next_node;
      |         ^~~~~~~
./samples/SAFE/__tmp_3f1276a9.c:190:9: error: expected declaration or statement at end of input
